# metadata-crawlers

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ddi_to_datacite.py  ddi_to_datacite.xsl  docker-compose.yml  harvester-oaipmh.py  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml  docker-publish.yml
harvester/: datacite_model.py  db_api_functions.py  dc_to_datacite.xsl  ddi_to_datacite.xsl  finbif_to_datacite.xsl  harvester_finbif.py  harvester_mdposit.py  harvester_oaipmh.py  logging.py  main.py  models.py  settings.py
harvester/harvesters/: schemaorg_harvester.py
tests/: test_finbif.py  test_transformation.py
tests/testdata/: dabar_raw.xml  dans_additional.json  dans_raw.xml  hzdr_raw.xml  swissubase_raw.xml
tests/testdata/finbif/: finbif_combined.json  finbif_datacite.xml
tests/testdata/transformation/: dabar_additional.xml  elletra_raw.xml  elletra_transformed.xml  swissubase_transformed.xml
